--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
   <string name="app_name">Umbrella</string>
+
+  <!-- Add today/tomorrow labels -->
+  <string name="today">Today</string>
+  <string name="tomorrow">Tomorrow</string>
 </resources>
